MODSOURCE-947 Fix normalization of 035 fields (#712)