@@ -21,14 +21,15 @@ import java.time.Instant;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.ForkJoinPool;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.logging.log4j.LogManager;
@@ -59,8 +60,6 @@ public final class AdditionalFieldsUtil {
   public static final String TAG_005 = "005";
   public static final String TAG_999 = "999";
   public static final String TAG_035 = "035";
-  public static final char TAG_035_SUB = 'a';
-  private static final char TAG_035_IND = ' ';
 
   public static final String HR_ID_FROM_FIELD = "001";
   private static final String HR_ID_PREFIX_FROM_FIELD = "003";
@@ -71,6 +70,7 @@ public final class AdditionalFieldsUtil {
   private static final char HR_ID_FIELD_IND = ' ';
   private static final String ANY_STRING = "*";
   private static final String OCLC = "OCoLC";
+  private static final String OCLC_PREFIX = "(OCoLC)";
   private static final String OCLC_PATTERN = "\\((" + OCLC + ")\\)((ocm|ocn|on)?0*|([a-zA-Z]+)0*)(\\d+\\w*)";
 
 
@@ -477,25 +477,22 @@ public final class AdditionalFieldsUtil {
     return false;
   }
 
-
   public static void normalize035(Record srsRecord) {
-    List<Subfield> subfields = get035SubfieldOclcValues(srsRecord, TAG_035, TAG_035_SUB);
+    List<Subfield> subfields = get035SubfieldOclcValues(srsRecord, TAG_035);
     if (!subfields.isEmpty()) {
       LOGGER.debug("normalize035:: normalizing 035 field of a record with id: {}", srsRecord.getId());
-      Set<String> normalized035Subfields = formatOclc(subfields);
-      updateOclcSubfield(srsRecord, normalized035Subfields);
+      formatOclc(subfields);
+      deduplicateOclc(srsRecord, subfields, TAG_035);
+      recalculateLeaderAndParsedRecord(srsRecord);
     }
   }
 
-  private static Set<String> formatOclc(List<Subfield> subFields) {
-    Set<String> processedSet = new LinkedHashSet<>();
+  private static void formatOclc(List<Subfield> subfields) {
     Pattern pattern = Pattern.compile(OCLC_PATTERN);
 
-    for (Subfield subfield : subFields) {
+    for (Subfield subfield : subfields) {
       String data = subfield.getData().replaceAll("[.\\s]", "");
-      var code = subfield.getCode();
       Matcher matcher = pattern.matcher(data);
-
       if (matcher.find()) {
         String oclcTag = matcher.group(1); // "OCoLC"
         String numericAndTrailing = matcher.group(5); // Numeric part and any characters that follow
@@ -503,7 +500,7 @@ public final class AdditionalFieldsUtil {
 
         if (prefix != null && (prefix.startsWith("ocm") || prefix.startsWith("ocn") || prefix.startsWith("on"))) {
           // If "ocm" or "ocn", strip entirely from the prefix
-          processedSet.add(code + "&(" + oclcTag + ")" + numericAndTrailing);
+          subfield.setData("(" + oclcTag + ")" + numericAndTrailing);
         } else {
           // For other cases, strip leading zeros only from the numeric part
           numericAndTrailing = numericAndTrailing.replaceFirst("^0+", "");
@@ -511,86 +508,79 @@ public final class AdditionalFieldsUtil {
             prefix = prefix.replaceAll("\\d+", ""); // Safely remove digits from the prefix if not null
           }
           // Add back any other prefix that might have been included like "tfe"
-          processedSet.add(code + "&(" + oclcTag + ")" + (prefix != null ? prefix : "") + numericAndTrailing);
+          subfield.setData("(" + oclcTag + ")" + (prefix != null ? prefix : "") + numericAndTrailing);
         }
-      } else {
-        // If it does not match, add the data as is
-        processedSet.add(code + "&" + data);
       }
     }
-    return processedSet;
   }
 
-  private static void updateOclcSubfield(Record recordForUpdate,
-                                         Set<String> normalizedValues) {
+  private static void deduplicateOclc(Record srcRecord, List<Subfield> subfields, String tag) {
+    List<Subfield> subfieldsToDelete = new ArrayList<>();
+
+    for (Subfield subfield: new ArrayList<>(subfields)) {
+      if (subfields.stream().anyMatch(s -> isOclcSubfieldDuplicated(subfield, s))) {
+        subfieldsToDelete.add(subfield);
+        subfields.remove(subfield);
+      }
+    }
+    Optional.ofNullable(computeMarcRecord(srcRecord)).ifPresent(marcRecord -> {
+      List<VariableField> variableFields = marcRecord.getVariableFields(tag);
+
+      subfieldsToDelete.forEach(subfieldToDelete ->
+        variableFields.forEach(field -> removeSubfieldIfExist(marcRecord, field, subfieldToDelete)));
+    });
+  }
+
+  private static boolean isOclcSubfieldDuplicated(Subfield s1, Subfield s2) {
+    return s1 != s2 && s1.getData().equals(s2.getData()) && s1.getCode() == s2.getCode();
+  }
+
+  private static void removeSubfieldIfExist(org.marc4j.marc.Record marcRecord, VariableField field, Subfield subfieldToDelete) {
+    if (field instanceof DataField dataField && dataField.getSubfields().contains(subfieldToDelete)) {
+      if (dataField.getSubfields().size() > 1) {
+        dataField.removeSubfield(subfieldToDelete);
+      } else {
+        marcRecord.removeVariableField(dataField);
+      }
+    }
+  }
+
+  private static void recalculateLeaderAndParsedRecord(Record recordForUpdate) {
     try (ByteArrayOutputStream os = new ByteArrayOutputStream()) {
-      if (recordForUpdate != null && recordForUpdate.getParsedRecord() != null && recordForUpdate.getParsedRecord().getContent() != null) {
-        MarcWriter streamWriter = new MarcStreamWriter(new ByteArrayOutputStream());
-        MarcJsonWriter jsonWriter = new MarcJsonWriter(os);
-        MarcFactory factory = MarcFactory.newInstance();
-        org.marc4j.marc.Record marcRecord = computeMarcRecord(recordForUpdate);
-        if (marcRecord != null) {
+      MarcWriter streamWriter = new MarcStreamWriter(new ByteArrayOutputStream());
+      MarcJsonWriter jsonWriter = new MarcJsonWriter(os);
+      org.marc4j.marc.Record marcRecord = computeMarcRecord(recordForUpdate);
 
-          DataField dataField = factory.newDataField(TAG_035, TAG_035_IND, TAG_035_IND);
-          normalizedValues.forEach(value -> {
-            var v = value.split("&");
-            dataField.addSubfield(factory.newSubfield(v[0].charAt(0), v[1]));
-          });
+      if (marcRecord != null) {
+        // use stream writer to recalculate leader
+        streamWriter.write(marcRecord);
+        jsonWriter.write(marcRecord);
 
-          replaceOclc035FieldWithNormalizedData(marcRecord, dataField);
-
-          // use stream writer to recalculate leader
-          streamWriter.write(marcRecord);
-          jsonWriter.write(marcRecord);
-
-          String parsedContentString = new JsonObject(os.toString()).encode();
-          // save parsed content string to cache then set it on the record
-          parsedRecordContentCache.put(parsedContentString, marcRecord);
-          recordForUpdate.setParsedRecord(recordForUpdate.getParsedRecord().withContent(parsedContentString));
-        }
+        String parsedContentString = new JsonObject(os.toString()).encode();
+        // save parsed content string to cache then set it on the record
+        parsedRecordContentCache.put(parsedContentString, marcRecord);
+        recordForUpdate.setParsedRecord(recordForUpdate.getParsedRecord().withContent(parsedContentString));
       }
     } catch (Exception e) {
-      LOGGER.warn("Failed to update OCLC subfield for record: {}",
-        recordForUpdate != null ? recordForUpdate.getId() : null, e);
+      LOGGER.warn("recalculateLeaderAndParsedRecord:: Failed to recalculate leader and parsed record for record: {}", recordForUpdate.getId(), e);
     }
   }
 
-  public static List<Subfield> get035SubfieldOclcValues(Record srcRecord, String tag, char subfield) {
+  public static List<Subfield> get035SubfieldOclcValues(Record srcRecord, String tag) {
     return Optional.ofNullable(computeMarcRecord(srcRecord))
       .stream()
       .flatMap(marcRecord -> marcRecord.getVariableFields(tag).stream())
-      .flatMap(field -> get035oclcSubfields(field, subfield).stream())
-      .toList();
+      .flatMap(field -> get035oclcSubfields(field).stream())
+      .collect(Collectors.toList());
   }
 
-  private static List<Subfield> get035oclcSubfields(VariableField field, char subfield) {
+  private static List<Subfield> get035oclcSubfields(VariableField field) {
     if (field instanceof DataField dataField) {
-
-      Optional<Subfield> oclcSubfield = dataField.getSubfields(subfield).stream()
-        .filter(sf -> sf.find(OCLC))
-        .findFirst();
-
-      if (oclcSubfield.isPresent()) {
-        return dataField.getSubfields();
-      } else {
-        return Collections.emptyList();
-      }
+      return dataField.getSubfields().stream()
+        .filter(sf -> sf.getData().trim().startsWith(OCLC_PREFIX))
+        .toList();
     }
     return Collections.emptyList();
-  }
-
-  private static void replaceOclc035FieldWithNormalizedData(org.marc4j.marc.Record marcRecord, DataField dataField) {
-    var variableFields = marcRecord.getVariableFields(TAG_035);
-    int[] index = {0};
-    if (!variableFields.isEmpty()) {
-      variableFields.stream()
-        .filter(variableField -> variableField.find(OCLC))
-        .forEach(variableField -> {
-          index[0] = (marcRecord.getDataFields().indexOf(variableField));
-          marcRecord.removeVariableField(variableField);
-        });
-      marcRecord.getDataFields().add(index[0], dataField);
-    }
   }
 
   /**
